--- a/task-3/client/src/assets/styles/main.scss
+++ b/task-3/client/src/assets/styles/main.scss
@@ -363,6 +363,7 @@ p{
                     margin-bottom: 7px;
                 }
                 &-item{
+                    cursor: pointer;
                     margin-bottom: 17px;
                     display: block;
                     text-decoration: none;
